--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ body {
 
 .logo{
   width: 60px;
+  margin-bottom: -20px;
 }
 
 .nav {
@@ -77,6 +78,17 @@ li {
   bottom: 0;
   padding: 30px;
   width: 100%;
+}
+
+.spacer{
+  background-color: blue;
+  height: 5000px;
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
 
 
