--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ li {
 }
 
 .middle {
-  background-color: #CD5C5C;
+  background-color: #8FBC8F;
   transition: .5s ease;
   opacity: 0;
   position: absolute;
@@ -69,6 +69,7 @@ li {
   color: white;
   font-size: 16px;
   padding: 16px 32px;
+  text-align: center;
 }
 
 .footer {
@@ -81,7 +82,7 @@ li {
 }
 
 .spacer{
-  background-color: blue;
+  background-color: #8FBC8F;
   height: 5000px;
   width: 100%;
 }
