--- a/css/main.css
+++ b/css/main.css
@@ -67,8 +67,8 @@ li {
 
 .text {
   color: white;
-  font-size: 16px;
-  padding: 16px 32px;
+  margin-top: 50%;
+  font-size: 10px;
   text-align: center;
 }
 
